--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["MasayaTahara <mocoso.0u1@gmail.com>"]
 python = "^3.9"
 boto3 = "^1.20.22"
 python-dotenv = "^0.19.2"
+fire = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
