--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_SESSION_TOKEN=
+AWS_ACCESS_KEY_ID=XXXXXXXXXX
+AWS_SECRET_ACCESS_KEY=XXXXXXXXXX
+AWS_SESSION_TOKEN=XXXXXXXXXX
