--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-findings.json
 failed_findings.json
+failed_findings.csv
 passed_findings.json
+passed_findings.csv
