--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fire = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
